--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "micropython-fusion"]
 	path = micropython-fusion
-	url = ./micropython-fusion/
+	url = https://github.com/micropython-IMU/micropython-fusion.git
 [submodule "micropython-mpu9x50"]
 	path = micropython-mpu9x50
-	url = ./micropython-mpu9x50/
+	url = https://github.com/micropython-IMU/micropython-mpu9x50.git
